--- a/package.json
+++ b/package.json
@@ -29,8 +29,14 @@
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "cookie": "^0.4.1",
+    "cookie-parser": "^1.4.5",
+    "cookies": "^0.8.0",
+    "csurf": "^1.11.0",
+    "express-rate-limit": "^5.1.3",
     "firebase": "^7.23.0",
     "firebase-admin": "^9.2.0",
+    "helmet": "^4.2.0",
     "isomorphic-unfetch": "^3.1.0",
     "mongodb": "^3.6.2",
     "next": "^9.5.5",
@@ -50,8 +56,14 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@types/cookie": "^0.4.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cookies": "^0.7.5",
+    "@types/csurf": "^1.11.0",
     "@types/express": "^4.17.3",
+    "@types/express-rate-limit": "^5.1.0",
     "@types/firebase": "^3.2.1",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "26.0.10",
     "@types/node": "^13.9.1",
     "@types/passport-jwt": "^3.0.3",
